# py-auto-i18n

./: .gitignore  LICENSE  README.md  README_en_US.md  auto-i18n.project.yaml  pyproject.toml
auto_i18n/: cli.py  config.py  export.py  extract.py  gpt.py  io.py  translate.py  utils.py
auto_i18n/i18n/: __init__.py  en_US.yaml  zh_CN.yaml
auto_i18n/utils/: __init__.py  echo.py  object.py  string.py
docs/: INIT_PROMPT.md
py_i18n/: cli.py  config.py  extract.py  gpt.py  translate.py  utils.py
test/: generate_sample.py
